<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph.xml"
    app:startDestination="@id/fragment_home">

    <fragment
        android:id="@+id/fragment_home"
        android:name="ir.tapsell.sample.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_fragment_home_to_fragment_rewarded_video"
            app:destination="@id/fragment_rewarded_video" />
        <action
            android:id="@+id/action_fragment_home_to_fragment_standard_banner"
            app:destination="@id/fragment_standard_banner" />
        <action
            android:id="@+id/action_fragment_home_to_fragment_interstitial"
            app:destination="@id/fragment_interstitial" />
        <action
            android:id="@+id/action_fragment_home_to_fragment_native_banner"
            app:destination="@id/fragment_native_banner" />
    </fragment>

    <fragment
        android:id="@+id/fragment_rewarded_video"
        android:name="ir.tapsell.sample.rewarded.RewardedVideoFragment"
        android:label="@string/rewarded_video"
        tools:layout="@layout/fragment_rewarded_video" />

    <fragment
        android:id="@+id/fragment_interstitial"
        android:name="ir.tapsell.sample.interstitial.InterstitialFragment"
        android:label="@string/interstitial"
        tools:layout="@layout/fragment_interstitial" />

    <fragment
        android:id="@+id/fragment_standard_banner"
        android:name="ir.tapsell.sample.standard.StandardBannerFragment"
        android:label="@string/standard_banner"
        tools:layout="@layout/fragment_standard_banner" />

    <fragment
        android:id="@+id/fragment_native_banner"
        android:name="ir.tapsell.sample.native.NativeBannerFragment"
        android:label="@string/native_banner"
        tools:layout="@layout/fragment_native_banner" />
</navigation>