<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/space_small"
    tools:context=".native.NativeBannerFragment">

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_adNetworks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:selectionRequired="true"
        app:singleSelection="true" />

    <LinearLayout
        android:id="@+id/ly_switch_native_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chip_adNetworks">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_switch_native_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/h5"
            android:text="@string/native_video" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/switch_native_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false" />
    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_request"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:text="@string/request"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_request_multiple"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/request_multiple"
        app:layout_constraintBottom_toTopOf="@+id/btn_show"
        app:layout_constraintTop_toBottomOf="@+id/btn_request" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_show"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show"
        app:layout_constraintTop_toBottomOf="@+id/btn_request_multiple" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_log"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:background="#ddd"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_show" />

    <FrameLayout
        android:id="@+id/native_banner_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/input_zone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/zone_id"
        android:textColor="@android:color/darker_gray"
        android:textSize="@dimen/h6"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>